--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,35 @@
+@import "tailwindcss";
+
+@theme {
+  --color-bg: light-dark(#918e88, #131517);
+  --color-primary: light-dark(#3b3d3d, rgba(255, 255, 255, 0.6));
+  --color-secondary: light-dark(#2e3333be, #7c7979f8);
+  --color-accent: #1a51a3e0;
+  --font-family-sans: system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+
+  color: var(--color-primary);
+  background-color: var(--color-bg);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  margin: 0 auto;
+  padding: 2rem;
+  max-width: 700px;
+}
+
+h1 {
+  font-size: 2rem;
 }
 
 body {
@@ -19,11 +38,6 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+  background-color: var(--color-bg);
+  color: var(--color-primary);
 }
