--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 @import "tailwindcss";
 
 @theme {
-  --color-bg: light-dark(#e5e2dc, #131517);
+  --color-bg: light-dark(#d7d7d7, #23272a);
   --color-primary: light-dark(
-    rgba(29, 33, 40, 0.887),
-    rgba(255, 255, 255, 0.6)
+    rgba(40, 45, 54, 0.887),
+    rgba(184, 172, 172, 0.961)
   );
-  --color-secondary: light-dark(#2e3333be, #7c7979f8);
+  --color-secondary: light-dark(#414a4afa, #b4ababd8);
   --color-accent: #1a51a3e0;
   --font-family-sans: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
@@ -27,7 +27,6 @@
 
 #root {
   margin: 0 auto;
-  padding: 2rem;
   max-width: 700px;
 }
 
@@ -43,4 +42,5 @@ body {
   min-height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-primary);
+  padding: 2rem;
 }
