--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme {
-  --color-bg: light-dark(#d7d7d7, #23272a);
+  --color-bg: light-dark(#f2ecec, #23272a);
   --color-primary: light-dark(
     rgba(68, 70, 75, 0.953),
     rgba(184, 172, 172, 0.961)
@@ -12,8 +12,6 @@
 }
 
 :root {
-  line-height: 1.5;
-  font-weight: 400;
   color-scheme: light dark;
 
   color: var(--color-primary);
